--- a/ontology-ui-demo/src/main/webapp/example-ui.css
+++ b/ontology-ui-demo/src/main/webapp/example-ui.css
@@ -32,3 +32,80 @@ h1 {
 #closeButton {
   margin: 15px 6px 6px;
 }
+
+/*
+body, div, span {
+	font-size: 14pt;
+	
+}
+*/
+a {
+	text
+} 
+
+.ontologyClassInfoAnnotation {
+	font-size: 12pt;
+	
+}
+
+.classIriLabel {
+	font-size: 9pt;	
+}
+
+.ontologyClassInfoPropertyRestrictions {
+	font-size: 12pt;
+	
+}
+
+
+.ontologyClassIndivHeader {
+	font-size: 14pt;
+	
+}
+
+.navContainer a:link, .navContainer a:visited, .navContainer a:active {
+	text-decoration: none;
+	font-size: 10pt;
+}
+
+.navContainer a:hover {
+	text-decoration: underline;
+	font-size: 10pt;
+}
+
+
+.ontTreeModelViewerContainer {
+	height:400px;
+	width:300px;
+	
+	font-size: 10pt;
+}
+
+.ontTreeModelBrowserContainer {
+	height: 400px;
+	width: 400px;
+}
+
+.ontTreePanelContentContainer {
+	
+}
+
+.ontTreePanelContentPanel {
+	height: 600px;
+	width: 800px;
+	
+}
+
+.ontologyClassIndiv {
+	
+}
+
+.ontPropRestr {
+	
+}
+
+li.ontologyIndivLabel {
+	 list-style: square;
+	 font-size: 10pt;	
+}
+
